crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__import-shadowed-by-loop-var_F402.ipynb.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F402 Import `os` from cell 1, line 1 shadowed by loop variable
 --> F402.ipynb:3:5
  |
1 | import os
2 | import os.path as path
3 | for os in range(3):
  |     ^^
4 |     pass
5 | for path in range(3):
  |

F402 Import `path` from cell 1, line 2 shadowed by loop variable
 --> F402.ipynb:5:5
  |
3 | for os in range(3):
4 |     pass
5 | for path in range(3):
  |     ^^^^
6 |     pass
  |
