crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__import-shadowed-by-loop-var_F402.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F402 Import `os` from line 1 shadowed by loop variable
 --> F402.py:5:5
  |
5 | for os in range(3):
  |     ^^
6 |     pass
  |

F402 Import `path` from line 2 shadowed by loop variable
 --> F402.py:8:5
  |
6 |     pass
7 |
8 | for path in range(3):
  |     ^^^^
9 |     pass
  |
