crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__init.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F401 `os` imported but unused
 --> __init__.py:1:8
  |
1 | import os
  |        ^^
2 |
3 | print(__path__)
  |
help: Remove unused import: `os`
