crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__invalid-print-syntax_F633.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F633 Use of `>>` is invalid with `print` function
 --> F633.py:4:1
  |
2 | import sys
3 |
4 | print >> sys.stderr, "Hello"
  | ^^^^^
