crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__load_after_multiple_unbinds_from_module_scope.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F841 [*] Local variable `x` is assigned to but never used
 --> <filename>:7:26
  |
5 |     try:
6 |         pass
7 |     except ValueError as x:
  |                          ^
8 |         pass
  |
help: Remove assignment to unused variable `x`
  |
6 |         pass
  -     except ValueError as x:
7 +     except ValueError:
8 |         pass
  |

F841 [*] Local variable `x` is assigned to but never used
  --> <filename>:12:26
   |
10 |     try:
11 |         pass
12 |     except ValueError as x:
   |                          ^
13 |         pass
   |
help: Remove assignment to unused variable `x`
   |
11 |         pass
   -     except ValueError as x:
12 +     except ValueError:
13 |         pass
   |
