crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__load_after_unbind_from_class_scope.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F841 [*] Local variable `x` is assigned to but never used
 --> <filename>:8:30
  |
6 |         try:
7 |             pass
8 |         except ValueError as x:
  |                              ^
9 |             pass
  |
help: Remove assignment to unused variable `x`
  |
7 |             pass
  -         except ValueError as x:
8 +         except ValueError:
9 |             pass
  |

F821 Undefined name `x`
  --> <filename>:13:15
   |
11 |         # This should raise an F821 error, rather than resolving to the
12 |         # `x` in `x = 1`.
13 |         print(x)
   |               ^
